--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,78 @@ color: seashell;
 background-color: black;
 opacity: 0.9;
 text-align: center;
+width: 100%;
 }
 
   header {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     position: fixed;
     border-bottom: 1px solid seashell;
     height: 69px;
     width: 100%;
+    margin: 0px;
+    z-index: 10;
+    background-color: black;
+
 }
 
 .logo {
   margin-left: 10px;
   height: 50px;
+}
+
+header a {
+  padding-right: 30px;
+}
+
+.content {
+  display: inline-flex;
+  flex-direction: column;
+  z-index: 2;
+}
+
+.box1 {
+  display: flex;
+  background-image: url(../resources/images/img5.jpg);
+  height: 700px;
+  width: 1200px;
+  position: relative;
+  margin-top: 69px;
+  align-items: center;
+}
+
+.box1text {
+  background-color: black;
+  height: auto;
+  width: 1200px;
+  padding: 5px;
+}
+
+.box2 {
+  width: 1000px;
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.box2text {
+  width: 100%;
+}
+
+.img {
+  position: relative;
+  display: inline-block;
+  height: 200px;
+  width: 300px;
+}
+
+.box3 {
+  background-image: url(../resources/images/img4.jpg);
+  position: relative;
+  display: inline-flex;
+  height: 500px;
+  width: 1200px;
 }
