--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,24 @@
 body {
-font-family: Helvetica;
-font-size: 22px;
-color: seashell;
-background-color: black;
-opacity: 0.9;
-text-align: center;
-width: 100%;
+  font-family: Helvetica;
+  font-size: 22px;
+  color: seashell;
+  background-color: black;
+  opacity: 0.9;
+  text-align: center;
+  width: 100%;
 }
 
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    border-bottom: 1px solid seashell;
-    height: 69px;
-    width: 100%;
-    margin: 0px;
-    z-index: 10;
-    background-color: black;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  border-bottom: 1px solid seashell;
+  height: 69px;
+  width: 100%;
+  margin: 0px;
+  z-index: 10;
+  background-color: black;
 
 }
 
@@ -35,6 +35,7 @@ header a {
   display: inline-flex;
   flex-direction: column;
   z-index: 2;
+  align-items: center;
 }
 
 .box1 {
@@ -79,4 +80,25 @@ header a {
   display: inline-flex;
   height: 500px;
   width: 1200px;
+  justify-content: center;
+  align-items: center;
+}
+
+.box3box {
+  background-color: black;
+  opacity: 1;
+  width: 300px;
+  margin: 20px;
+}
+
+.box4 {
+  display: inline-block;
+  height: 200px;
+}
+
+h5 .copy {
+  text-align: left;
+  position: relative;
+  width: 100%;
+  margin-left: 20px;
 }
