--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ header {
 
 header a {
   padding-right: 30px;
+  color: seashell;
 }
 
 .content {
@@ -38,7 +39,7 @@ header a {
   align-items: center;
 }
 
-.box1 {
+#box1 {
   display: flex;
   background-image: url(../resources/images/img5.jpg);
   height: 700px;
@@ -55,7 +56,7 @@ header a {
   padding: 5px;
 }
 
-.box2 {
+#box2 {
   width: 1000px;
   display: inline-flex;
   flex-wrap: wrap;
@@ -70,11 +71,10 @@ header a {
 .img {
   position: relative;
   display: inline-block;
-  height: 200px;
-  width: 300px;
+  align-items: center;
 }
 
-.box3 {
+#box3 {
   background-image: url(../resources/images/img4.jpg);
   position: relative;
   display: inline-flex;
@@ -96,9 +96,9 @@ header a {
   height: 200px;
 }
 
-h5 .copy {
+h5.copy {
   text-align: left;
   position: relative;
   width: 100%;
-  margin-left: 15px;
+  margin-left: 20px;
 }
